--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 18.x
+      - uses: jetli/wasm-pack-action@v0.4.0
       - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: yarn prettier:check
@@ -34,6 +35,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - uses: jetli/wasm-pack-action@v0.4.0
       - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: yarn test
