fix: missing registry url

--- a/.github/workflows/rollingversions.yml
+++ b/.github/workflows/rollingversions.yml
@@ -32,6 +32,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+          registry-url: 'https://registry.npmjs.org'
       - name: Install wasm-pack
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
       - run: yarn install --frozen-lockfile
